# memory-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: openrouter_example.py
src/: APIClient.py  Memory.py
src/examples/: keyword_memory_test.py  memory_system_test.py  openai_api_test.py  openrouter_api_test.py  openrouter_example.py
src/memory/: HierarchicalMemory.py  KeywordMemory.py  SummaryMemory.py  TimeWindowMemory.py  VectorMemory.py  __init__.py  summary_memory.py  time_window_memory.py  vector_memory.py
src/playground/embeddings/: playground.py  utils.py  viz.py
